Fix/radio widget not showing on first render (#44)
* add height to root div

* added content security policy header

* indented index html file

* change isMobile uislice data and change wrong name of slices

* add something in the video src that I dont really know about it just to make safari render video without errors

* change setappheight function from file

* indent file

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -15,6 +15,10 @@ body {
   width: 100vw;
 }
 
+#root {
+  height: var(--app-height);
+}
+
 main {
   height: 100%;
 }
